--- a/analysis_packets_logs.ipynb
+++ b/analysis_packets_logs.ipynb
@@ -6,7 +6,7 @@
       "name": "PythonAnalysePackets.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMuA0edcT7ZGh6fpCdDwdcv",
+      "authorship_tag": "ABX9TyMk9ehGeAsFb+WwvL1yngxB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1099,15 +1099,53 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "gBH8PeUwclIJ"
+      },
+      "source": [
+        "Analysing stats"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "sj0H9AhQzOC-"
       },
       "source": [
-        ""
+        "# Top Source Adddress\n",
+        "print(\"# Top Source Address\")\n",
+        "print(df['src'].describe(),'\\n\\n')\n",
+        "\n",
+        "# Top Destination Address\n",
+        "print(\"# Top Destination Address\")\n",
+        "print(df['dst'].describe(),\"\\n\\n\")\n",
+        "\n",
+        "frequent_address = df['src'].describe()['top']\n",
+        "\n",
+        "# Who is the top address speaking to\n",
+        "print(\"# Who is it talking to most of the time\")\n",
+        "print(df[df['src'] == frequent_address]['dst'].unique(),\"\\n\\n\")\n",
+        "\n",
+        "# Who is the top address speaking to (dst ports)\n",
+        "print(\"# Who is the top address speaking to for dest ports\")\n",
+        "print(df[df['src'] == frequent_address]['dport'].unique(),\"\\n\\n\")\n",
+        "\n",
+        "# Who is the top address speaking to (src ports)\n",
+        "print(\"# Who is the top address speaking src ports\")\n",
+        "print(df[df['src'] == frequent_address]['sport'].unique(),\"\\n\\n\")"
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "G5pa5YcFcj2C"
+      },
+      "source": [
+        ""
+      ]
     }
   ]
 }
