--- a/analysis_packets_logs.ipynb
+++ b/analysis_packets_logs.ipynb
@@ -6,7 +6,7 @@
       "name": "PythonAnalysePackets.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMk9ehGeAsFb+WwvL1yngxB",
+      "authorship_tag": "ABX9TyOvUpmLXAGF03PdmmLFlWYU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1133,7 +1133,64 @@
         "\n",
         "# Who is the top address speaking to (src ports)\n",
         "print(\"# Who is the top address speaking src ports\")\n",
-        "print(df[df['src'] == frequent_address]['sport'].unique(),\"\\n\\n\")"
+        "print(df[df['src'] == frequent_address]['sport'].unique(),\"\\n\\n\")\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "bd1I0bwrgi2T"
+      },
+      "source": [
+        "#Scapy \n",
+        "!pip install scapy\n",
+        "from google.colab import files\n",
+        "\n",
+        "uploaded = files.upload()\n",
+        "\n",
+        "for fn in uploaded.keys():\n",
+        "  print('User uploaded file \"{name}\" with length {length} bytes'.format(\n",
+        "      name=fn, length=len(uploaded[fn])))\n",
+        "Requirement already satisfied: scapy in /usr/local/lib/python3.7/dist-packages (2.4.5)\n",
+        "Saving suspicious.pcap to suspicious.pcap\n",
+        "User uploaded file \"suspicious.pcap\" with length 33463 bytes\n",
+        "In [33]:\n",
+        "def read_pcap():\n",
+        "  print(\"hey\")\n",
+        "  pcap_read = rdpcap('suspicious.pcap')\n",
+        "  for pkt in pcap_read:\n",
+        "    if pkt.haslayer(DNSQR):\n",
+        "        query = pkt[DNSQR].qname\n",
+        "        print(query)\n",
+        "    if pkt.haslayer(IP):\n",
+        "      pckt_src=pkt[IP].src\n",
+        "      pckt_dst=pkt[IP].dst\n",
+        "      pckt_ttl=pkt[IP].ttl\n",
+        "      print(\"IP Packet: {} is going to {} and has ttl value {}\".format(pckt_src,pckt_dst,pckt_ttl))\n",
+        "New Section\n",
+        "In [34]:\n",
+        "from scapy.all import *\n",
+        "\n",
+        "\n",
+        "\n",
+        "def main():\n",
+        "  read_pcap()\n",
+        "\n",
+        "\n",
+        "\n",
+        "if __name__=='__main__':\n",
+        "  main()\n",
+        "\n",
+        "#interface = \"eth0\"\n",
+        "#def print_packet(packet):\n",
+        "# ip_layer = packet.getlayer(IP)\n",
+        "# print(\"[!] New Packet: {src} -> {dst}\".format(src=ip_layer.src,\n",
+        "#dst=ip_layer.dst))\n",
+        "#print(\"[*] Start sniffing...\")\n",
+        "#sniff(iface=interface, filter=\"ip\", prn=print_packet)\n",
+        "#print(\"[*] Stop sniffing\")"
       ],
       "execution_count": null,
       "outputs": []
